Update uspek dependency

--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     implementation(Deps.kotlinStdlib8)
     implementation(Deps.kotlinxCoroutinesCore)
     testImplementation(Deps.junit)
-    testImplementation("com.github.langara:USpek:really-micro-SNAPSHOT")
+    testImplementation(Deps.uspek)
 }
